Updated selector titles

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -362,7 +362,7 @@ permalink: /selectors
     <!-- SingleSelects -->
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Single select: expanded</div>
+      <div class="field__label">Single select - expanded</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,Not started;#F4CA16,,,Ongoing;var(--color-red),,,Finished" expanded="true" singleselect="true" selectedIndexes="1" %}
@@ -373,7 +373,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Single select: expanded and required (you cannot unselect all of them)</div>
+      <div class="field__label">Single select - expanded and required (you cannot unselect all of them)</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,Not started;#F4CA16,,,Ongoing;var(--color-red),,,Finished" expanded="true" singleselect="true" required="true" selectedIndexes="1" %}
@@ -384,7 +384,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Single select: expanded and readonly</div>
+      <div class="field__label">Single select - expanded and readonly</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,Not started;#F4CA16,,,Ongoing;var(--color-red),,,Finished" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
@@ -396,7 +396,7 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Single select: not expanded (shows only one item) - no popup attached</div>
+      <div class="field__label">Single select - not expanded (shows only one item) - no popup attached</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#F4CA16,,,Ongoing" singleselect="true" selectedIndexes="1" %}
@@ -408,7 +408,7 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Single select: not expanded (shows only one item) and readonly</div>
+      <div class="field__label">Single select - not expanded (shows only one item) and readonly</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#F4CA16,,,Ongoing" readonly="true" singleselect="true" selectedIndexes="1" %}
@@ -422,7 +422,7 @@ permalink: /selectors
     <!-- Multiselects -->
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Multi select: expanded</div>
+      <div class="field__label">Multi select - expanded</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" expanded="true" multiselect="true" selectedIndexes="1,2" %}
@@ -433,7 +433,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Multi select: expanded and required (at least one has to be selected)</div>
+      <div class="field__label">Multi select - expanded and required (at least one has to be selected)</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" expanded="true" multiselect="true" required="true" selectedIndexes="1" %}
@@ -444,7 +444,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Multi select: expanded and readonly</div>
+      <div class="field__label">Multi select - expanded and readonly</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" expanded="true" readonly="true" multiselect="true" selectedIndexes="1,2" %}
@@ -455,7 +455,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Multi select: not expanded</div>
+      <div class="field__label">Multi select - not expanded</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" multiselect="true" selectedIndexes="1,2,3" %}
@@ -466,7 +466,7 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Multi select: not expanded and readonly</div>
+      <div class="field__label">Multi select - not expanded and readonly</div>
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" readonly="true" multiselect="true" selectedIndexes="1,2,3" %}
