Added button small capital

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -302,6 +302,15 @@ permalink: /selectors
     </div>
     <!-- Field -->
     <div class="field field--not-empty">
+      <div class="field__label">Button - small capital (possible with any color)</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" smallCaps="true" %}
+        </div>
+      </div>
+    </div>
+    <!-- Field -->
+    <div class="field field--not-empty">
       <div class="field__label">Button - go</div>
       <div class="field__data">
         <div class="field__value">
