--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -82,289 +82,7 @@ permalink: /selectors
 </script>
 
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
-  <div class="sm:w-1/2 px-4">
-
-    <!-- Field -->
-    <div class="field">
-      <div class="field__label">Checkbox</div>
-      <div class="field__data">
-
-        <div class="field__value">
-          {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
-          <input class="field__input" type="text" value="checked">
-        </div>
-
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field">
-      <div class="field__label">Title</div>
-      <div class="field__data">
-        <div class="field__value">
-          <input class="field__input" type="text" value="">
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--error JS_field--error">
-      <div class="field__label">Assigned to</div>
-      <div class="field__data">
-        <div class="field__error JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
-        <div class="field__value">
-          <input class="field__input" type="text" value="_Not Assigned">
-        </div>
-      </div>
-    </div>
-
-    <!-- Popup (error)-->
-    <div class="multiSelector" id="ms-error-user">
-      <div class="itemBox">
-        <ul class="itemBox__row itemBox__row--custom">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
-              <div class="note note--error">
-                <p>Item must have a user assigned.</p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-
-    <!-- Field -->
-    <div class="field">
-      <div class="field__label">Due date</div>
-      <div class="field__data">
-        <div class="field__value">
-          <input class="field__input" value="">
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="sm:w-1/2 px-4">
-
-    <!-- Field -->
-    <div class="field">
-      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left JS_has-popup" data-popid="#ms-privacy"></div></div>
-      <div class="field__data">
-
-        <div class="field__value">
-        {% include components/selector.html selectorData=",,,Disagree;,,,Agree" expanded="true" singleselect="true" selectedIndexes="1" %}
-
-          <span>with our <a href="#" class="link link--primary">Privacy Policiy</a>.</span>
-
-          <input class="field__input" type="text" value="disagree">
-        </div>
-
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field">
-      <div class="field__label">Email</div>
-      <div class="field__data">
-        <div class="field__value">
-          <input class="field__input" type="email" value="nick.de.jaeger@tenforce.com">
-        </div>
-      </div>
-      <div class="note">
-        <p>Fill in a valid email address.</p>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field JS_field--error">
-      <div class="field__label">Status</div>
-      <div class="field__data">
-
-        <div class="field__error JS_has-popup" data-popid="#ms-error"></div>
-        <div class="field__value">
-          <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
-                <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
-              </div>
-            </div>
-          </div>
-
-          <span>check correct alignment</a>.</span>
-
-          <input class="field__input" type="text" value="_Not Assigned">
-        </div>
-
-      </div>
-      <div class="note">
-        <p>Actual invoice amount</p>
-        <p>For fixed price projects and service requests (no <a href="#" class="link link--primary">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
-      </div>
-    </div>
-
-    <!-- Popup -->
-    <div class="multiSelector" id="ms-error">
-      <div class="itemBox">
-        <ul class="itemBox__row itemBox__row--custom">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
-              <div class="note note--error">
-                <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Popup -->
-    <div class="multiSelector animate-popup" id="ms-status">
-      <div class="itemBox JS_itemBox">
-        <ul class="itemBox__row">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
-              <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through statuses">
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="itemBox">
-        <ul class="itemBox__row itemBox__row--custom JS_itemBoxRow--error" style="display: none;">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
-              <div class="note note--error">
-                <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="itemBox JS_optionsChildren">
-        {% for item in site.data.multiselector-status.items %}
-          <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_error-popupRow">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
-                <div class="itemBox__value">
-                  <div class="selector selector--expanded">
-                    <div class="selector__item JS_selectorItem--active selector__item--selected">
-                      <div class="selector__block">
-                        <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
-                        <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-            {% if item.selected == "true" %}
-              {% include javascript/itemSelected.html %}
-            {% endif %}
-          </ul>
-        {% endfor %}
-      </div>
-    </div>
-
-     <!-- Popup -->
-    <div class="multiSelector" id="ms-privacy">
-      <div class="itemBox">
-        <ul class="itemBox__row itemBox__row--custom">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
-
-              <div class="note note--tooltip">
-                <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
-              </div>
-
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
-  <div class="sm:w-1/2 p-8 overflow-hidden">
-
-    <h2 class="mb-8">Button configurations</h2>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Button</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" %}
-        </div>
-      </div>
-    </div>
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Button - small capital (possible with any color)</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" smallCaps="true" %}
-        </div>
-      </div>
-    </div>
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Button - go</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Button - naked</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" naked="true"%}
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Button - drop</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" drop="true"%}
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Buttons - aligned text in the middle</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-          {% include components/button-aligned-text.html title="or" %}
-          {% include components/button.html title="forget me tomorrow"%}
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Buttons - aligned text in the middle 2</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-          {% include components/button-aligned-text.html title="or" %}
-          {% include components/button.html title="forget me tomorrow" naked="true"%}
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <div class="sm:w-1/2 p-8 overflow-hidden">
+  <div class="p-8 overflow-hidden">
 
     <h2 class="mb-8">Selector configuration examples without popup</h2>
 
@@ -748,6 +466,213 @@ permalink: /selectors
       </div>
     </div>
 
+  </div>
+</div>
+
+
+
+<div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
+  <div class="sm:w-1/2 px-4">
+
+    <!-- Field -->
+    <div class="field">
+      <div class="field__label">Checkbox</div>
+      <div class="field__data">
+
+        <div class="field__value">
+          {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
+          <input class="field__input" type="text" value="checked">
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field">
+      <div class="field__label">Title</div>
+      <div class="field__data">
+        <div class="field__value">
+          <input class="field__input" type="text" value="">
+        </div>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field field--error JS_field--error">
+      <div class="field__label">Assigned to</div>
+      <div class="field__data">
+        <div class="field__error JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
+        <div class="field__value">
+          <input class="field__input" type="text" value="_Not Assigned">
+        </div>
+      </div>
+    </div>
+
+    <!-- Popup (error)-->
+    <div class="multiSelector" id="ms-error-user">
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <div class="note note--error">
+                <p>Item must have a user assigned.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+    <!-- Field -->
+    <div class="field">
+      <div class="field__label">Due date</div>
+      <div class="field__data">
+        <div class="field__value">
+          <input class="field__input" value="">
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="sm:w-1/2 px-4">
+
+    <!-- Field -->
+    <div class="field">
+      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left JS_has-popup" data-popid="#ms-privacy"></div></div>
+      <div class="field__data">
+
+        <div class="field__value">
+        {% include components/selector.html selectorData=",,,Disagree;,,,Agree" expanded="true" singleselect="true" selectedIndexes="1" %}
+
+          <span>with our <a href="#" class="link link--primary">Privacy Policiy</a>.</span>
+
+          <input class="field__input" type="text" value="disagree">
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field">
+      <div class="field__label">Email</div>
+      <div class="field__data">
+        <div class="field__value">
+          <input class="field__input" type="email" value="nick.de.jaeger@tenforce.com">
+        </div>
+      </div>
+      <div class="note">
+        <p>Fill in a valid email address.</p>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field JS_field--error">
+      <div class="field__label">Status</div>
+      <div class="field__data">
+
+        <div class="field__error JS_has-popup" data-popid="#ms-error"></div>
+        <div class="field__value">
+          <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
+                <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+              </div>
+            </div>
+          </div>
+
+          <span>check correct alignment</a>.</span>
+
+          <input class="field__input" type="text" value="_Not Assigned">
+        </div>
+
+      </div>
+      <div class="note">
+        <p>Actual invoice amount</p>
+        <p>For fixed price projects and service requests (no <a href="#" class="link link--primary">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
+      </div>
+    </div>
+
+    <!-- Popup -->
+    <div class="multiSelector" id="ms-error">
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <div class="note note--error">
+                <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Popup -->
+    <div class="multiSelector animate-popup" id="ms-status">
+      <div class="itemBox JS_itemBox">
+        <ul class="itemBox__row">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through statuses">
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom JS_itemBoxRow--error" style="display: none;">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <div class="note note--error">
+                <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="itemBox JS_optionsChildren">
+        {% for item in site.data.multiselector-status.items %}
+          <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_error-popupRow">
+            <li class="itemBox__cell">
+              <div class="itemBox__cellInner">
+                <div class="itemBox__value">
+                  <div class="selector selector--expanded">
+                    <div class="selector__item JS_selectorItem--active selector__item--selected">
+                      <div class="selector__block">
+                        <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
+                        <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            {% if item.selected == "true" %}
+              {% include javascript/itemSelected.html %}
+            {% endif %}
+          </ul>
+        {% endfor %}
+      </div>
+    </div>
+
+     <!-- Popup -->
+    <div class="multiSelector" id="ms-privacy">
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+
+              <div class="note note--tooltip">
+                <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
