--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -6,10 +6,10 @@ permalink: /tutorial
 
   <main class="container-master">
     <header class="app-header px-4 py-2">
-      {% include blocks/app-header.html %}
+      {% include blocks/app-header/app-header.html %}
     </header>
-    {% include blocks/old-pmx-tabline.html %}
-    {% include blocks/old-pmx-listtool.html %}
+    {% include blocks/old-pmx/old-pmx-tabline.html %}
+    {% include blocks/old-pmx/old-pmx-listtool.html %}
 
     <div id="ctl00_pagebody_container" class="pagebody-container">
        <div class="pagebody">
